--- a/Visual contour widget.ipynb
+++ b/Visual contour widget.ipynb
@@ -18,6 +18,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For use in Google Colab first run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/mvilavidal/Visual-Contour\n",
+    "import sys\n",
+    "sys.path.insert(0,'Visual-Contour/')\n",
+    "import contourwidgetutils\n",
+    "print('ready')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Visual contour widget"
    ]
   },
@@ -30,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,13 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01b53bea6bbf4632b37f2ab28de37f41",
+       "model_id": "af1367657e4e48ab9a15a3def2e450eb",
        "version_major": 2,
        "version_minor": 0
       },
