--- a/Visual contour widget.ipynb
+++ b/Visual contour widget.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    (license note at the end of the file or https://github.com/mvilavidal/Visual-Contour)"
+    "    (license note at the end of the file or https://github.com/compaes/Visual-Contour)"
    ]
   },
   {
@@ -45,27 +45,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Execute the two following cells to use the widget"
+    "Execute the following cell to use the widget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import contourwidgetutils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71ff868ebcbb4e658b66d07cdf917ad1",
+       "model_id": "06ec57658e16419e924875d432ee8913",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,6 +69,7 @@
     }
    ],
    "source": [
+    "import contourwidgetutils\n",
     "display(contourwidgetutils.widget)"
    ]
   },
@@ -85,6 +77,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Generate whole set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Execute the following cell to generate the stimulus set. Choose the combinations of parameters v, d, t that you're interested in and click on 'Generate set'. The stimuli will be saved within the current folder, in a subfolder called 'stimulus_set_output'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7de98c006eea4e1e83ffd89eec0cb737",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='Vertices (v): '), Box(children=(Checkbox(value=False, description='10', indent=Fal…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import contourwidgetutils\n",
+    "display(contourwidgetutils.generator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    Copyright (C) 2022, Manel Vila-Vidal\n",
     "    Contact details: m@vila-vidal.com / manel.vila-vidal@upf.edu\n",
     "    Date: 10 Mar 2022\n",
@@ -110,7 +151,7 @@
     "    package and the paper:\n",
     "    \n",
     "    > Vila-Vidal, M. (2022). VisualContour v1.0,\n",
-    "    https://github.com/mvilavidal/Visual-Contour. Zenodo. (DOI)\n",
+    "    https://github.com/compaes/Visual-Contour. Zenodo. (DOI)\n",
     "    \n",
     "    > REFERENCE PAPER"
    ]
